tests/baselines/reference/parserTypeAssertionInObjectCreationExpression1.errors.txt
==== tests/cases/compiler/parserTypeAssertionInObjectCreationExpression1.ts (3 errors) ====
    new <T>Foo()
        ~
!!! parserTypeAssertionInObjectCreationExpression1.ts(1,5): error TS1003: Identifier expected.
         ~
!!! parserTypeAssertionInObjectCreationExpression1.ts(1,6): error TS2095: Cannot find name 'T'.
           ~~~
!!! parserTypeAssertionInObjectCreationExpression1.ts(1,8): error TS2095: Cannot find name 'Foo'.